docs: add isRevese prop description to Tilt component documentation

--- a/app/docs/tiltable/page.mdx
+++ b/app/docs/tiltable/page.mdx
@@ -51,3 +51,4 @@ A component that creates an interactive 3D tilt effect using spring animations. 
 | className      | string     |         | Additional CSS classes for styling the border trail. |
 | transition     | Transition |         | Custom transition settings for the animation.        |
 | rotationFactor | number     | 15      | Controls the maximum rotation angle in degrees.      |
+| isRevese       | boolean    | false   | Reverses the tilt effect's rotation direction.       |
