--- a/app/docs/image-comparison/page.mdx
+++ b/app/docs/image-comparison/page.mdx
@@ -3,13 +3,10 @@ export const metadata = {
   description:
     'Interactively compare two images with a draggable slider to reveal differences.',
 };
-
-import {
-  ImageComparisonExample,
-  ImageComparisonExample2,
-  ImageComparisonExample3,
-  ImageComparisonExample4,
-} from '@/components/core/image-comparison';
+import { ImageComparisonBasic } from '@/components/examples/image-comparison-basic';
+import { ImageComparisonHover } from '@/components/examples/image-comparison-hover';
+import { ImageComparisonSpring } from '@/components/examples/image-comparison-spring';
+import { ImageComparisonCustomSlider } from '@/components/examples/image-comparison-custom-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -23,29 +20,29 @@ Interactively compare two images with a draggable slider to reveal differences.
 ### Image Comparison Basic
 
 <ComponentCodePreview
-  component={<ImageComparisonExample />}
-  filePath='examples/apple-style-dock'
+  component={<ImageComparisonBasic />}
+  filePath='examples/image-comparison-basic'
 />
 
 ### Image Comparison with hover
 
 <ComponentCodePreview
-  component={<ImageComparisonExample2 />}
-  filePath='examples/apple-style-dock'
+  component={<ImageComparisonHover />}
+  filePath='examples/image-comparison-hover'
 />
 
 ### Image Comparison with spring options
 
 <ComponentCodePreview
-  component={<ImageComparisonExample3 />}
-  filePath='examples/apple-style-dock'
+  component={<ImageComparisonSpring />}
+  filePath='examples/image-comparison-spring'
 />
 
 ### Image Comparison with custom slider
 
 <ComponentCodePreview
-  component={<ImageComparisonExample4 />}
-  filePath='examples/apple-style-dock'
+  component={<ImageComparisonCustomSlider />}
+  filePath='examples/image-comparison-custom-slider'
 />
 
 ## Code
