feat: update sizes examples image-comparison

--- a/app/docs/image-comparison/page.mdx
+++ b/app/docs/image-comparison/page.mdx
@@ -10,7 +10,6 @@ import { ImageComparisonCustomSlider } from '@/components/examples/image-compari
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
-
 # Image Comparison
 
 Interactively compare two images with a draggable slider to reveal differences.
@@ -22,6 +21,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 <ComponentCodePreview
   component={<ImageComparisonBasic />}
   filePath='examples/image-comparison-basic'
+  classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
 ### Image Comparison with hover
@@ -29,6 +29,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 <ComponentCodePreview
   component={<ImageComparisonHover />}
   filePath='examples/image-comparison-hover'
+  classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
 ### Image Comparison with spring options
@@ -36,6 +37,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 <ComponentCodePreview
   component={<ImageComparisonSpring />}
   filePath='examples/image-comparison-spring'
+  classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
 ### Image Comparison with custom slider
@@ -43,6 +45,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 <ComponentCodePreview
   component={<ImageComparisonCustomSlider />}
   filePath='examples/image-comparison-custom-slider'
+  classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
 ## Code
@@ -55,22 +58,22 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 | Prop          | Type            | Default                      | Description                                   |
 | :------------ | :-------------- | :--------------------------- | :-------------------------------------------- |
-| children      | React.ReactNode |                              | ImageComparisonImage components.                 |
+| children      | React.ReactNode |                              | ImageComparisonImage components.              |
 | className     | string          | undefined                    | Optional CSS class for styling the component. |
 | enableHover   | boolean         | false                        | Controls whether hover effects are enabled.   |
 | springOptions | SpringOptions   | `{ bounce: 0, duration: 0 }` | Options for customizing the spring animation. |
 
-###	 ImageComparisonImage
+### ImageComparisonImage
 
-| Prop          | Type            | Default                      | Description                                   |
-| :------------ | :-------------- | :--------------------------- | :-------------------------------------------- |
-| className     | string          | undefined                    | Optional CSS class for styling the component. |
-| alt           | string          |                              | The alt text for the image.                   |
-| src           | string          |                              | The source URL of the image.                   |
-| position      | 'left' \| 'right' | 'left'                       | The position of the image.                     |
+| Prop      | Type              | Default   | Description                                   |
+| :-------- | :---------------- | :-------- | :-------------------------------------------- |
+| className | string            | undefined | Optional CSS class for styling the component. |
+| alt       | string            |           | The alt text for the image.                   |
+| src       | string            |           | The source URL of the image.                  |
+| position  | 'left' \| 'right' | 'left'    | The position of the image.                    |
 
 ### ImageComparisonSlider
 
-| Prop          | Type            | Default                      | Description                                   |
-| :------------ | :-------------- | :--------------------------- | :-------------------------------------------- |
-| className     | string          | undefined                    | Optional CSS class for styling the component. |
+| Prop      | Type   | Default   | Description                                   |
+| :-------- | :----- | :-------- | :-------------------------------------------- |
+| className | string | undefined | Optional CSS class for styling the component. |
