feat: update spotlight examples

--- a/app/docs/spotlight/page.mdx
+++ b/app/docs/spotlight/page.mdx
@@ -52,8 +52,8 @@ A dynamic spotlight effect component that follows cursor movement.
 
 ### Spotlight
 
-| Prop          | Type          | Default                           | Description                            |
-| :------------ | :------------ | :-------------------------------- | :------------------------------------- |
-| className     | string        | ''                                | Additional CSS classes for styling     |
-| size          | number        | 200                               | Size of the spotlight effect in pixels |
-| springOptions | SpringOptions | `{ stiffness: 400, damping: 25 }` | Animation spring configuration         |
+| Prop          | Type          | Default         | Description                            |
+| :------------ | :------------ | :-------------- | :------------------------------------- |
+| className     | string        | ''              | Additional CSS classes for styling     |
+| size          | number        | 200             | Size of the spotlight effect in pixels |
+| springOptions | SpringOptions | `{ bounce: 0 }` | Animation spring configuration         |
